@@ -120,8 +120,6 @@
 
 * 20090121: If the "associate()" callback returns an empty list, crash.
 
-* 20090121: "DB->compact()" should return more data to the caller.
-
 * 20090204: "txn->stat()" returns also a list of active transactions.
   Evaluate if we must export that data to python.
 
